# RiskGuard-AI

./: .gitignore  README.md  main.py  pyproject.toml  requirements.in  requirements.txt
configs/development/: app.yaml  detection.yaml  logging.yaml
scripts/: test_bbox.py  test_camera.py  test_config.py  test_detection.py  test_detector.py  test_frame.py  test_logger.py  test_video_reader.py  test_yolo.py
src/camera_engine/: __init__.py  camera.py  camera_manager.py  camera_status.py
src/common/: __init__.py  bbox.py  detection.py  frame.py
src/infrastructure/config/: __init__.py  config_loader.py  config_manager.py
src/infrastructure/logging/: logger.py
src/perception_engine/: __init__.py
src/perception_engine/detectors/: __init__.py  base_detector.py  detector_factory.py  yolo_detector.py
src/video_engine/: base_video_source.py  file_video_source.py  video_factory.py  video_reader.py  video_source.py
